--- a/pc-parts/items.html
+++ b/pc-parts/items.html
@@ -4,6 +4,36 @@
     <meta charset="UTF-8">
     <title>PC PARTS Tab</title>
 </head>
-<h1>PC PARTS</h1>
+    
+<body>
+<p><h1>PC PARTS</h1></p>
+<!-- below is image-->
+<p><h2>Below is the pic to build a pc</h2></p>
+<p>
+<img src="../../Images/How-Long-Does-it-Take-to-Build-a-PC.webp" alt="This is a picture">
+</p>
+
+<p><h3>Follow these Steps:</h3></p>
+<!-- Below is alist-->
+<ul>
+    <li>Buy GPU</li>
+    <li>BUY CPU</li>
+    <li>BUY RAM</li>
+</ul>
+
+<p><ol>
+    <li>Have Money</li>
+    <li>Buy Parts</li>
+    <li>Assemble</li>
+</ol>
+</p>
+
+
+
+
+
+
+</body>
+
 
 </html>
